--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   multi_select_flutter: ^4.1.3
   multiselect_formfield: ^0.1.7
   flutter_material_pickers: ^3.3.0
+  cart_counter: ^0.0.1
+  badges: ^3.1.1
 
 dev_dependencies:
   flutter_test:
