--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_html: ^2.2.1
+
   video_player: any
   video_player_web_hls: any
   flutter_launcher_icons: ^0.11.0
@@ -48,7 +48,7 @@ dependencies:
   firebase_database: ^10.0.16
   universal_html: ^2.2.1
   flutter_widget_from_html: ^0.9.1
-  webviewx: ^0.2.2
+
   carousel_slider: ^4.2.1
   firebase_storage: ^11.1.0
   image_network: ^2.5.1
@@ -58,9 +58,25 @@ dependencies:
   flutter_form_builder: ^8.0.0
   get: ^4.6.5
   form_builder_validators: ^8.5.0
-  flutter_inappwebview: ^5.7.2+3
+
   dio: ^5.1.1
   collection: ^1.17.0
+  mercadopago_sdk: ^1.3.0
+  js: ^0.6.5
+  fluttertoast: ^8.2.1
+  quickalert: ^1.0.1
+  cool_alert: ^2.0.1
+  art_sweetalert: ^0.0.5
+  fwfh_webview: ^0.6.2+5
+  flutter_widget_from_html_core: ^0.9.1
+  webviewx_plus: ^0.3.2
+  embed_webview: ^0.0.2
+  webview_flutter: ^3.0.4
+  webview_windows: ^0.2.2
+  file_picker: ^5.2.10
+  flutter_dropzone: ^3.0.5
+  geocode: ^1.0.2
+  google_maps_flutter: ^2.2.6
 
 dev_dependencies:
   flutter_test:
